--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         //noinspection GradleDependency
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2'
-        classpath 'com.bugsnag:bugsnag-android-gradle-plugin:4.+'
+        classpath 'com.bugsnag:bugsnag-android-gradle-plugin:4.7.5'
     }
 }
 
@@ -64,7 +64,7 @@ subprojects {
         maven { url "http://nexus.motechproject.org/content/repositories/drishti" }
         maven { url "http://nexus.motechproject.org/content/repositories/snapshots" }
         maven { url "http://acra.googlecode.com/svn/repository/releases" }
-        maven { url "http://repo.maven.apache.org/maven2" }
+        maven { url "https://repo.maven.apache.org/maven2" }
         maven { url "http://cloudant.github.io/cloudant-sync-eap/repository" }
 
         maven { url "${projectDir}/opensrp-bidan/../libs/" }
