--- a/opensrp-bidan/build.gradle
+++ b/opensrp-bidan/build.gradle
@@ -6,9 +6,9 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.3'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.31.2'
 //        classpath 'org.robolectric:robolectric-gradle-plugin:1.1.0'
 
     }
@@ -118,6 +118,11 @@ android {
             includeAndroidResources = true
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 tasks.withType(Test) {
@@ -141,18 +146,18 @@ dependencies {
     }
 
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
     annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.1'
-    annotationProcessor 'com.jakewharton:butterknife:7.0.0'
+    annotationProcessor 'com.jakewharton:butterknife:10.2.1'
 
-    implementation 'com.google.guava:guava:20.0'
+    implementation 'com.google.guava:guava:24.1-jre'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'com.github.lecho:hellocharts-android:v1.5.8'
 
     implementation files('libs/FlurryAnalytics-6.0.0.jar')
@@ -163,14 +168,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
 
-    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.13.1'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
     testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
     testImplementation('com.squareup:fest-android:1.0.8') { exclude module: 'support-v4' }
-    testImplementation 'org.robolectric:robolectric:3.8'
+    testImplementation 'org.robolectric:robolectric:4.3'
     testImplementation 'org.robolectric:shadows-multidex:3.8'
     // PowerMock
     def powerMockVersion = '1.7.3'
@@ -179,13 +184,13 @@ dependencies {
     testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
     testImplementation "org.powermock:powermock-classloading-xstream:$powerMockVersion"
 
-    androidTestImplementation('com.android.support.test:runner:0.5') {
+    androidTestImplementation('com.android.support.test:runner:1.0.2') {
         exclude module: 'support-annotations'
     }
-    androidTestImplementation('com.android.support.test:rules:0.5') {
+    androidTestImplementation('com.android.support.test:rules:1.0.2') {
         exclude module: 'support-annotations'
     }
-    implementation 'com.bugsnag:bugsnag-android:4.+'
+    implementation 'com.bugsnag:bugsnag-android:4.22.3'
 }
 
 //task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
