--- a/opensrp-bidan/build.gradle
+++ b/opensrp-bidan/build.gradle
@@ -131,7 +131,7 @@ tasks.withType(Test) {
 
 
 dependencies {
-    implementation('org.smartregister:opensrp-client-core:1.3.12-SNAPSHOT@aar') {
+    implementation('org.smartregister:opensrp-client-core:1.4.0-SNAPSHOT@aar') {
         transitive = true
         exclude group: 'com.github.bmelnychuk', module: 'atv'
         exclude group: 'com.google.guava', module: 'guava'
@@ -153,7 +153,7 @@ dependencies {
     annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.1'
     annotationProcessor 'com.jakewharton:butterknife:10.2.1'
 
-    implementation 'com.google.guava:guava:24.1-jre'
+    implementation group: 'com.google.guava', name: 'guava', version: '28.2-android'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // Because RxAndroid releases are few and far between, it is recommended you also
     // explicitly depend on RxJava's latest version for bug fixes and new features.
@@ -161,9 +161,7 @@ dependencies {
     implementation 'com.github.lecho:hellocharts-android:v1.5.8'
 
     implementation files('libs/FlurryAnalytics-6.0.0.jar')
-    implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
-        transitive = true
-    }
+
     implementation 'org.osmdroid:osmdroid-android:6.0.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
@@ -190,30 +188,5 @@ dependencies {
     androidTestImplementation('com.android.support.test:rules:1.0.2') {
         exclude module: 'support-annotations'
     }
-    implementation 'com.bugsnag:bugsnag-android:4.22.3'
-}
 
-//task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
-//
-//    reports {
-//        xml.enabled = true
-//        html.enabled = true
-//    }
-//
-//    getReports().getXml().setDestination(file("${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"))
-//    getReports().getHtml().setDestination(file("${buildDir}/reports/jacoco/jacocoRootReport/html"))
-//
-//    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*', '**/*$ViewBinder*.*']
-//    def debugTree = fileTree(dir: "$project.buildDir/intermediates/classes/debug", excludes: fileFilter)
-//    def mainSrc = "$project.projectDir/src/main/java"
-//
-//    sourceDirectories = files([mainSrc])
-//    classDirectories = files([debugTree])
-//    executionData = fileTree(dir: project.buildDir, includes: [
-//            'jacoco/testDebugUnitTest.exec', 'outputs/code-coverage/connected/*coverage.ec'
-//    ])
-//}
-//
-//coveralls {
-//    jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"
-//}
+}
