--- a/opensrp-bidan/src/main/AndroidManifest.xml
+++ b/opensrp-bidan/src/main/AndroidManifest.xml
@@ -18,8 +18,13 @@
         tools:replace="android:icon"
         android:name=".application.BidanApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_opensrp_logo"
-        >
+        android:usesCleartextTraffic="true"
+        android:icon="@mipmap/ic_opensrp_logo">
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
